add broker statistics api
